[gd_scene load_steps=36 format=3 uid="uid://dnus5g7rwsm71"]

[ext_resource type="PackedScene" uid="uid://ca3vfexx3chtr" path="res://Scenes/Rabbit.tscn" id="1_ebmjs"]
[ext_resource type="PackedScene" uid="uid://b810pw1blmn73" path="res://Scenes/word_gen.tscn" id="2_qxrlw"]
[ext_resource type="Script" uid="uid://7j4jtxrpw5fk" path="res://Scripts/pathToRail.gd" id="3_3dryh"]
[ext_resource type="Script" uid="uid://dpwqhsut0wvj8" path="res://Scripts/follow.gd" id="3_wrm1d"]
[ext_resource type="Script" uid="uid://bt3mkrrxa7rvl" path="res://Scripts/close_tutorial.gd" id="5_h4fw4"]
[ext_resource type="Script" uid="uid://cg5axuaqisu8" path="res://Scripts/object_generator.gd" id="5_wowpa"]
[ext_resource type="PackedScene" uid="uid://clq1xjp614hft" path="res://Scenes/blast_trough.tscn" id="6_i6g32"]
[ext_resource type="Texture2D" uid="uid://cd3msi5es7rnh" path="res://Assets/TRUE_ASSETS/TEXT_SHADOW.png" id="7_v158k"]
[ext_resource type="Texture2D" uid="uid://hb8o12kdbopv" path="res://Assets/TRUE_ASSETS/TEXT.png" id="8_h4fw4"]
[ext_resource type="Texture2D" uid="uid://bpw5vi2d5ldux" path="res://Assets/TRUE_ASSETS/FRAMES.png" id="8_ldgsr"]
[ext_resource type="Texture2D" uid="uid://b2g87q6hjqhbl" path="res://Assets/TRUE_ASSETS/BUNNY_PIC.png" id="8_o5yvi"]
[ext_resource type="Script" uid="uid://dhu0nc830pmuc" path="res://Scripts/start_animation.gd" id="9_rku1e"]
[ext_resource type="Texture2D" uid="uid://di5r1vslig4ce" path="res://Assets/TRUE_ASSETS/EFFECT.png" id="11_rfjv2"]
[ext_resource type="Texture2D" uid="uid://dnbkvj2sd6f22" path="res://Assets/TRUE_ASSETS/ACTION_LINES.png" id="12_1phco"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ebmjs"]
sky_top_color = Color(0.5372549, 0.60784316, 0.9137255, 1)
sky_horizon_color = Color(1.2933929, 1.3286871, 1.4816282, 1)
ground_bottom_color = Color(0.5372549, 0.60784316, 0.9137255, 1)
ground_horizon_color = Color(1.2933929, 1.3286871, 1.4816282, 1)

[sub_resource type="Sky" id="Sky_qxrlw"]
sky_material = SubResource("ProceduralSkyMaterial_ebmjs")

[sub_resource type="Environment" id="Environment_wrm1d"]
background_energy_multiplier = 0.0
sky = SubResource("Sky_qxrlw")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.05
tonemap_mode = 3
tonemap_exposure = 16.0
tonemap_white = 16.0
glow_enabled = true
glow_intensity = 0.5
glow_bloom = 1.0
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0, 0.4500003, 1, 1)
fog_light_energy = 0.49
fog_density = 0.254
fog_sky_affect = 0.048
fog_depth_curve = 1.9999982
fog_depth_end = 1048.1
adjustment_enabled = true
adjustment_saturation = 8.0

[sub_resource type="Curve3D" id="Curve3D_qxrlw"]
_data = {
"points": PackedVector3Array(-0.93603516, 2.4947891, 21.792542, 0.93603516, -2.4947891, -21.792542, -582.375, 106.11222, 745.2852, 0.00024414063, 4.457405, 21.880127, -0.00024414063, -4.457405, -21.880127, -602.3772, 95.780106, 675.2974, 6.1035156e-05, 4.2694397, 16.035278, -6.1035156e-05, -4.2694397, -16.035278, -612.50903, 81.98159, 611.68536, 6.1035156e-05, 0.51686096, 9.122864, -6.1035156e-05, -0.51686096, -9.122864, -629.7134, 61.86445, 531.16315, -6.1035156e-05, -0.09647751, 37.56897, 6.1035156e-05, 0.09647751, -37.56897, -634.5371, 61.267292, 428.24982, 0, -0.7544174, 17.906616, 0, 0.7544174, -17.906616, -628.4761, 61.633385, 309.42538, 6.1035156e-05, -0.10650635, 18.134445, -6.1035156e-05, 0.10650635, -18.134445, -614.0752, 61.448956, 191.20583, 0.00012207031, -14.9146805, 14.512207, -0.00012207031, 14.9146805, -14.512207, -510.84827, 81.547134, 134.39487),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_o5yvi"]
atlas = ExtResource("8_ldgsr")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rku1e"]
atlas = ExtResource("8_ldgsr")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfjv2"]
atlas = ExtResource("8_ldgsr")
region = Rect2(192, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_1phco"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5yvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rku1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfjv2")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1phco"]
atlas = ExtResource("8_o5yvi")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb51f"]
atlas = ExtResource("8_o5yvi")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnt18"]
atlas = ExtResource("8_o5yvi")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewbju"]
atlas = ExtResource("8_o5yvi")
region = Rect2(96, 96, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_85qyi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1phco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb51f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnt18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewbju")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_85qyi"]
atlas = ExtResource("11_rfjv2")
region = Rect2(0, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iivbl"]
atlas = ExtResource("11_rfjv2")
region = Rect2(0, 96, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nbq1"]
atlas = ExtResource("11_rfjv2")
region = Rect2(0, 192, 128, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_7t8sx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85qyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iivbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nbq1")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_exi56"]
atlas = ExtResource("12_1phco")
region = Rect2(0, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t8sx"]
atlas = ExtResource("12_1phco")
region = Rect2(0, 96, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg4q0"]
atlas = ExtResource("12_1phco")
region = Rect2(0, 192, 128, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_exi56"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exi56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg4q0")
}],
"loop": true,
"name": &"default",
"speed": 13.0
}]

[node name="Game" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wrm1d")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
visible = false
light_energy = 0.08
light_specular = 0.0

[node name="Rabbit" parent="." node_paths=PackedStringArray("movement_direction_node", "emotions", "FAST", "BOOST") instance=ExtResource("1_ebmjs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
movement_direction_node = NodePath("../Camera3D")
emotions = NodePath("../Camera3D/Rabbit_face/Holder/faces")
FAST = NodePath("../Camera3D/SPEED/Fast")
BOOST = NodePath("../Camera3D/SPEED/BOOST")
START_MOVE_TIME = 0.5
START_MOVE_SPEED = 1.0
START_MOVE_SLOW_DOWN = 0.5
START_MOVE_FAST_SLOW_DOWN = 0.5
START_MOVE_SPEED_BOOST_MUL = 4.0
START_MOVE_SPEED_BOOST_ADD = 80.0
FAST_RUN_SPEED = 8.0
FAST_RUN_STOP_TRESHOLD = 16.0
QUICK_STOP_RELESE_MUL = 1.5
RUNNING_SPEED = 4.0
RUNNING_SLOW_DOWN = 0.5
JUMP_START_FORCE = 4.0
JUMP_START_GRAVITY = 4.0
JUMP_START_SLOW_DOWN = 0.1
FALL_SPEED = 0.5
FALL_GRAVITY = 40.0
TRICK_TIME = 0.2
TRICK_FORCE = 8.0
TRICK_GRAVITY = 16.0
TRICK_SLOW_DOWN = 0.1
HIT_TROUGH_TIME = 1.0
HIT_TROUGH_CLONES = 10
HIT_TROUGH_DEBRIS_TIMER = 10
GRINDING_MIN_SPEED = 30
GRINDING_ADDER = 10
FAST_AIR_SLOW_DOWN = 0.1
FAST_AIR_GRAVITY = 10.0

[node name="WORD_GEN" parent="." instance=ExtResource("2_qxrlw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 575.9912, 196.60815, 427.7413)

[node name="Debriss" type="Node3D" parent="."]

[node name="RAILS" type="Node3D" parent="."]

[node name="Edge_1" type="Path3D" parent="RAILS"]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 0, 0)
curve = SubResource("Curve3D_qxrlw")
script = ExtResource("3_3dryh")

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("track_object")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2367687, 1, -4.399667)
current = true
script = ExtResource("3_wrm1d")
stalk_distance = 3
track_object = NodePath("../Rabbit")

[node name="GUI" type="CanvasLayer" parent="Camera3D"]
layer = 3
script = ExtResource("5_h4fw4")

[node name="TextShadow" type="Sprite2D" parent="Camera3D/GUI"]
position = Vector2(64, 67)
texture = ExtResource("7_v158k")

[node name="TextShadow2" type="Sprite2D" parent="Camera3D/GUI"]
position = Vector2(64, 64)
texture = ExtResource("7_v158k")

[node name="TextShadow3" type="Sprite2D" parent="Camera3D/GUI"]
position = Vector2(64, 58)
texture = ExtResource("7_v158k")

[node name="TextShadow4" type="Sprite2D" parent="Camera3D/GUI"]
position = Vector2(64, 53)
texture = ExtResource("7_v158k")

[node name="TextShadow5" type="Sprite2D" parent="Camera3D/GUI"]
position = Vector2(64, 46)
texture = ExtResource("7_v158k")

[node name="TextShadow6" type="Sprite2D" parent="Camera3D/GUI"]
position = Vector2(64, 38)
texture = ExtResource("7_v158k")

[node name="Text" type="Sprite2D" parent="Camera3D/GUI"]
position = Vector2(64, 48)
scale = Vector2(0.21, 0.21)
texture = ExtResource("8_h4fw4")

[node name="Rabbit_face" type="CanvasLayer" parent="Camera3D"]
layer = 2

[node name="Holder" type="Node2D" parent="Camera3D/Rabbit_face"]
position = Vector2(16, 80)
scale = Vector2(0.25, 0.25)

[node name="Frame" type="AnimatedSprite2D" parent="Camera3D/Rabbit_face/Holder"]
sprite_frames = SubResource("SpriteFrames_1phco")
frame_progress = 0.7732533
script = ExtResource("9_rku1e")

[node name="faces" type="AnimatedSprite2D" parent="Camera3D/Rabbit_face/Holder"]
rotation = -0.3822271
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_85qyi")
frame = 1

[node name="SPEED" type="CanvasLayer" parent="Camera3D"]

[node name="Fast" type="AnimatedSprite2D" parent="Camera3D/SPEED"]
position = Vector2(64, 48)
sprite_frames = SubResource("SpriteFrames_7t8sx")
frame_progress = 0.8375554
script = ExtResource("9_rku1e")

[node name="BOOST" type="AnimatedSprite2D" parent="Camera3D/SPEED"]
position = Vector2(64, 48)
sprite_frames = SubResource("SpriteFrames_exi56")
frame_progress = 0.47716442
script = ExtResource("9_rku1e")

[node name="RandomPowers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 577.00446, 577.71924, 406.06754)
visible = false
script = ExtResource("5_wowpa")
spawn_size = Vector3(1500, 1000, 1500)
spawn_obj = ExtResource("6_i6g32")
spawn_size_min = 1.0
spawn_size_max = 1.0
spawn_amount = 1000

[editable path="Rabbit"]
